--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@vercel/node": "^3.0.13",
     "dotenv-cli": "^7.3.0",
-    "telegraf": "^4.15.3"
+    "node-telegram-bot-api": "^0.66.0",
+    "nodemon": "^3.1.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
@@ -18,7 +19,8 @@
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@types/node-telegram-bot-api": "^0.64.6"
   },
   "scripts": {
     "dev": "DEBUG=bot* dotenv -- nodemon -e ts -x ts-node src/index.ts",
